<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Colors</string>
    <string name="action_settings">Settings</string>
    <string name="blue_button">BLUE</string>
    <string name="red_button">RED</string>
    <string name="green_button">GREEN</string>
    <string name="yellow_button">YELLOW</string>
    <string name="home_button">HOME</string>
    <string name="title_activity_blue">BlueActivity</string>
    <string name="title_activity_red">RedActivity</string>
    <string name="title_activity_green">GreenActivity</string>
    <string name="title_activity_yellow">YellowActivity</string>

</resources>
