<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" 
    android:background="#0101DF">

	<Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/red_button"
	    android:onClick="redpage"/>
	<Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/green_button"
	    android:onClick="greenpage"/>
	<Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/yellow_button"
	    android:onClick="yellowpage"/>
	<Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/home_button" 
    	android:onClick="homepage"/>
</LinearLayout>