<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" 
    android:background="#01DF01">
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/blue_button"
        android:textColor="#0000FF"
    	android:onClick="bluepage"/>
	<Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/red_button"
	    android:textColor="#FF0000"
	    android:onClick="redpage"/>
	<Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/yellow_button"
	    android:textColor="#FFFF00"
	    android:onClick="yellowpage"/>
	<Button 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/home_button"
	    android:onClick="homepage"
	    android:textColor="#000000" />
</LinearLayout>
