<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <Button
        android:id="@+id/blue_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/blue_button"
        android:textColor="#0000FF"
    	android:onClick="bluepage"/>
	<Button
	    android:id="@+id/red_button" 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/red_button"
	    android:textColor="#FF0000"
	    android:onClick="redpage"/>
	<Button
	    android:id="@+id/green_button" 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/green_button"
	    android:textColor="#00FF00"
	    android:onClick="greenpage"/>
	<Button
	    android:id="@+id/yellow_button" 
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
	    android:text="@string/yellow_button"
	    android:textColor="#FFFF00"
	    android:onClick="yellowpage"/>
</LinearLayout>
